styles.css
:root{
  --background:white;
  --primary-text-color:black;
}

*,
*::before,
*::after{

  box-sizing: border-box;
}

body{
  margin:0;
  
}

/*
HEADER AND NAVIGATION
*/

header{
  background-color:var(--background);
  /* border: 2px solid orange; */
  text-align: left;
  position: fixed;
  z-index:999;
  width:100%;
  
  
}


nav{
 position:absolute;
 /* border: 2px solid green; */
 text-align: left;
 top:100%;
 left:0;
 background-color: var(--background);
 width: 100%;
 transform:scale(1,0);
 transform-origin:top;
 transition: transform 400ms ease-in-out;
}

nav ul{
  /* border: 2px solid red; */
  padding:0;
  margin:0;
  list-style: none; 
}

nav li{
  /* border: 2px solid cyan; */
  margin-left:1em;
  margin-bottom:1em;
}

nav a{
  color:var(--primary-text-color);
  text-decoration:none;
  /* text-transform: uppercase; */
  font-size:1.2rem;
  opacity:0;
  transition: opacity 150ms ease-in-out;
}

nav a:hover{
 color: rgb(61, 162, 221);
}

.nav-toggle{
  display:none;
}

.nav-toggle-label{
  position:absolute;
  top:0;
  right:0;
  margin-right: 1em;
  /* border: 1px solid red; */
  height:100%;
  display:flex;
  align-items: center;

}

.nav-toggle-label span,
.nav-toggle-label span::before,
.nav-toggle-label span::after{
  display:block;
  background-color: black;
  height:2px;
  width:2em;
  border-radius: 2px;
  position:relative;
}

.nav-toggle-label span::before,
.nav-toggle-label span::after{
  content:'';
  position:absolute;
}

.nav-toggle-label span::before{
  bottom:7px;
}

.nav-toggle-label span::after{
  top:7px;
}


.nav-toggle:checked ~ nav {
transform: scale(1,1);
}

.nav-toggle:checked ~ nav a{
  opacity: 1;
  transition: opacity 250ms ease-in-out 250ms;
}


@media screen and (min-width:675px){
  .nav-toggle-label{
    display: none;
  }

  header{
    display: grid;
    grid-template-columns: 1fr auto minmax(600px, 3fr) 1fr;
  }
  
  .logo{
  
    grid-column:1/2;
  }

  nav{
    all: unset;
    grid-column: 3/5;
display: flex;
justify-content: flex-end;
align-items: center;
  }
  
  nav ul{
    display: flex;
    justify-content: flex-end;
    /* border: 1px solid red; */

  }

  nav li {
    margin-left:3em;
    margin-bottom:0;
  }
  nav a {
    opacity:1;
    position:relative;
  }

  
    
}

